Change author names in cookiecutter files

--- a/offgridplanner/templates/base.html
+++ b/offgridplanner/templates/base.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
           content="Implementation of the Offgridplanner in Django" />
-    <meta name="author" content="Daniel Roy Greenfeld" />
+    <meta name="author" content="Reiner Lemoine Institute" />
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}" />
     {% block css %}
       <!-- Latest compiled and minified Bootstrap CSS -->
