--- a/offgridplanner/templates/pages/project_setup.html
+++ b/offgridplanner/templates/pages/project_setup.html
@@ -50,12 +50,12 @@
                   <div style="display: flex;
                               align-items: center;
                               margin-bottom: 10px;
-                              margin-top: 10px">{{ form|get_field:"do_demand_estimation"|as_crispy_field }}</div>
+                              margin-top: 10px">{{ opts_form|get_field:"do_demand_estimation"|as_crispy_field }}</div>
                   <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                    {{ form|get_field:"do_grid_optimization"|as_crispy_field }}
+                    {{ opts_form|get_field:"do_grid_optimization"|as_crispy_field }}
                   </div>
                   <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                    {{ form|get_field:"do_es_design_optimization"|as_crispy_field }}
+                    {{ opts_form|get_field:"do_es_design_optimization"|as_crispy_field }}
                   </div>
                 </div>
               </form>
