Add api views and helper functions

--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -327,3 +327,20 @@
       </div>
     </main>
   {% endblock content %}
+  {% block end_body_scripts %}
+    <script>
+      // url of API urls
+      const csrfToken = '{{ csrf_token }}';
+      //const project_id = {{ proj_id }};
+      const dbNodesToJsUrl = `{% url 'projects:db_nodes_to_js' proj_id %}`;
+      const dbLinksToJsUrl = `{% url 'projects:db_links_to_js' proj_id %}`;
+      const fileNodesToJsUrl = `{% url 'projects:file_nodes_to_js' %}`;
+      const consumerToDBUrl = `{% url 'projects:consumer_to_db' proj_id %}`;
+      const addBuildingsUrl = `{% url 'projects:add_buildings_inside_boundary' proj_id  %}`;
+      const removeBuildingsUrl = `{% url 'projects:remove_buildings_inside_boundary' proj_id  %}`;
+    </script>
+    <script src="{% static 'js/integrate_map.js' %}"></script>
+    <script src="{% static 'js/add_drawing_tools_to_map.js' %}"></script>
+    <script src="{% static 'js/pages/consumer_selection.js' %}"></script>
+    <script src="{% static 'js/backend_communication.js' %}"></script>
+  {% endblock end_body_scripts %}
