Fix error in base.html

--- a/offgridplanner/templates/base.html
+++ b/offgridplanner/templates/base.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load custom_template_tags %}
 
+<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="utf-8" />
@@ -107,7 +108,6 @@
             integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
-    <script src="{% static 'node_modules/aos/dist/aos.js' %}"></script>
     <script src="{% static 'js/project.js' %}"></script>
     {% if messages %}
       <script>
