Add url path to list projects and setup new projects

--- a/offgridplanner/templates/pages/user_projects.html
+++ b/offgridplanner/templates/pages/user_projects.html
@@ -36,7 +36,7 @@
                     {% for project in projects %}
                       <tr>
                         <td>{{ project.id }}</td>
-                        <td>{{ project.project_name }}</td>
+                        <td>{{ project.name }}</td>
                         <td>{{ project.date_created }}</td>
                         <td>{{ project.date_updated }}</td>
                         <td>{{ project.status }}</td>
