--- a/offgridplanner/templates/pages/landing_page.html
+++ b/offgridplanner/templates/pages/landing_page.html
@@ -260,3 +260,7 @@
     </div>
   </main>
 {% endblock content %}
+
+  {% block end_body_scripts %}
+    <script src="{% static 'js/backend_communication.js' %}"></script>
+  {% endblock end_body_scripts %}
