--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -17,7 +17,7 @@
   <link href="{% static 'css/pages/consumer_selection.css' %}"
         rel="stylesheet" />
 {% endblock head_block %}
-{% block content %}
+{% block progression_content %}
   <main>
     <div id="fixed-symbol" style="position: fixed; bottom: 60px; left: 20px;">
       <img alt="Icon"
@@ -326,7 +326,7 @@
         </form>
       </div>
     </main>
-  {% endblock content %}
+  {% endblock progression_content %}
   {% block end_body_scripts %}
     <script>
       // url of API urls
