--- a/offgridplanner/templates/step_progression.html
+++ b/offgridplanner/templates/step_progression.html
@@ -30,7 +30,7 @@
           {% for step in step_list %}
             <li {% if step_id == forloop.counter %}class="active"{% endif %}>
               {% if proj_id %}
-                <a href="{% url 'ogp_steps' proj_id forloop.counter %}">{% translate step %}</a>
+                <a href="{% url 'steps:ogp_steps' proj_id forloop.counter %}">{% translate step %}</a>
               {% else %}
                 {% translate step %}
               {% endif %}
@@ -60,14 +60,14 @@
             {% if step_id > 1 %}
               <a id="previous-button"
                  class="btn btn--medium btn--hollow btn--previous"
-                 href="{% url 'cpn_steps' proj_id step_id|add:'-1' %}"
+                 href="{% url 'steps:ogp_steps' proj_id step_id|add:'-1' %}"
                  aria-disabled="true">{% translate "Previous" %}</a>
             {% endif %}
             {% if step_id < step_list|length %}
               {% block next_btn %}
                 <a id="next-button"
                    class="btn btn--medium"
-                   href="{% url 'cpn_steps' proj_id step_id|add:1 %}">{% translate "Next" %}</a>
+                   href="{% url 'steps:ogp_steps' proj_id step_id|add:1 %}">{% translate "Next" %}</a>
               {% endblock next_btn %}
             {% endif %}
           {% else %}
