Enable saving project setup

--- a/offgridplanner/templates/step_progression.html
+++ b/offgridplanner/templates/step_progression.html
@@ -73,7 +73,7 @@
           {% else %}
             <button id="next-button"
                     class="btn btn--medium"
-                    onclick="javascript:submitFormBtn.click();">{% translate "Next" %}</button>
+                    onclick="javascript:document.getElementById('submitFormBtn').click();">{% translate "Next" %}</button>
           {% endif %}
         </div>
         <div class="step-footer__right"></div>
