--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -327,6 +327,15 @@
       </div>
     </main>
   {% endblock progression_content %}
+
+{% block next_btn %}
+{% url 'steps:demand_estimation' proj_id as demand_estimation_url %}
+<button id="next-button"
+        class="btn btn--medium"
+        onclick="javascript:consumer_to_db(href='{{ demand_estimation_url }}', file_type='db');">{% translate "Next" %}</button>
+
+{% endblock next_btn %}
+
   {% block end_body_scripts %}
     <script>
       // url of API urls
