--- a/offgridplanner/templates/account/signup.html
+++ b/offgridplanner/templates/account/signup.html
@@ -17,7 +17,7 @@
             <img src="{% static 'assets/illustrations/open_plan_hero_hexagon.svg' %}" alt="open_plan cells">
         </div>
         <div class="signup-frame__heading">
-            {% translate "Welcome to the open-plan-tool" %}
+            {% translate "Welcome to the Offgridplanner" %}
         </div>
         <div class="signup-frame__subheading">
             {% translate "Do you already have an account?" %} <a href="{% url 'account_login' %}">{% translate "Log in" %}</a>
