Use allauth account_signup view instead of custom

--- a/offgridplanner/templates/account/login.html
+++ b/offgridplanner/templates/account/login.html
@@ -21,7 +21,7 @@
                   </div-->
                   <p style="text-align:left;">&nbsp
                       {% translate "Do you not have an account yet?" %} <a
-                      href="{% url 'users:account_signup' %}">{% translate "Sign up" %}</a>
+                      href="{% url 'account_signup' %}">{% translate "Sign up" %}</a>
                   <p style="text-align: left">
                     <a href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
                   </p>
