--- a/offgridplanner/templates/navbar.html
+++ b/offgridplanner/templates/navbar.html
@@ -96,7 +96,7 @@
           <li class="nav-item">
             <!-- pages/signup.html -->
             <a class="btn btn--small"
-               href="{% url 'users:account_signup' %}"
+               href="{% url 'account_signup' %}"
                role="button">{% translate "Sign up" %}</a>
           </li>
         {% endif %}
