--- a/offgridplanner/templates/navbar.html
+++ b/offgridplanner/templates/navbar.html
@@ -11,7 +11,7 @@
 {% endif %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light {{ navbar_class }}">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">
+    <a class="navbar-brand" href="{% url 'projects:home' %}">
       <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
            alt="PeopleSun Logo" />
     </a>
