Fix household icons being displayed as power houses

--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -349,7 +349,7 @@
       const removeBuildingsUrl = `{% url 'projects:remove_buildings_inside_boundary' proj_id  %}`;
       window.onload = function () {
         //redirect_if_cookie_is_missing(true, true); //for anonymous user --> do it pythonside
-        db_nodes_to_js({{proj_id}}, true);
+        db_nodes_to_js({{proj_id}}, false);
         //show_email_and_project_in_navbar({{proj_id}});
         //TODO reenable video_tutorial
         //show_video_tutorial();
