Fix show results button on projects list

--- a/offgridplanner/templates/pages/user_projects.html
+++ b/offgridplanner/templates/pages/user_projects.html
@@ -70,7 +70,7 @@
                       </td>
                       <td>
                         <span style="float:right;">
-                          <a href="{% url 'steps:simulation_results' %}" class="grey_button">Show Results</a>
+                          <a href="{% url 'steps:simulation_results' project.id %}" class="grey_button">Show Results</a>
                         </span>
                       </td>
                     </tr>
