Fix abort calculation button

--- a/offgridplanner/templates/pages/simulation_results.html
+++ b/offgridplanner/templates/pages/simulation_results.html
@@ -553,7 +553,7 @@
                 another calculation. You can either revoke the pending calculation or wait for it to be finished
               </p>
               <div class="clearfix">
-                <button onclick="revoke_users_task();" type="button" class="deletebtn">Revoke</button>
+                <button onclick="abort_calculation();" type="button" class="deletebtn">Revoke</button>
                 <button onclick="document.getElementById('pendingTask').style.display='none';"
                         type="button"
                         class="cancelbtn">Wait</button>
