--- a/offgridplanner/templates/pages/calculating.html
+++ b/offgridplanner/templates/pages/calculating.html
@@ -33,9 +33,9 @@
                         {% endif %}
                         <a>{{ msg }}</a>
                         <p></p>
-                        <a href='energy_system_design/?project_id={{ proj_id }}'
+                        <a href="{% url 'steps:energy_system_design' proj_id %}"
                            class="btn btn--long text-right"
-                           onclick="revoke_users_task();"
+                           onclick="abort_calculation();"
                         >Abort Calculation</a>
                     </div>
                 </div>
@@ -77,6 +77,7 @@
   const csrfToken = '{{ csrf_token }}';
   const startCalculationUrl = `{% url 'optimization:start_calculation' proj_id %}`;
   const waitingForResultsUrl = `{% url 'optimization:waiting_for_results' %}`;
+  const abortCalculationUrl = `{% url 'optimization:abort_calculation' proj_id %}`;
 </script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
